# Todo-app-hackathon

./: .gitignore  README.md  VERCEL_DEPLOYMENT_GUIDE.md  vercel.json
.specify/memory/: constitution.md
backend/: .env.example  README.md  app_main.py  debug_db.py  fastapi_app.py  jwt_test.py  model_test.py  password_test.py  pyproject.toml  requirements.txt  run_server.py  vercel_api.py
backend/src/: main.py
backend/src/api/: auth.py  tasks.py
backend/src/database/: engine.py  session.py
backend/src/middleware/: jwt_middleware.py  rate_limiter.py
backend/src/models/: task.py  user.py
backend/src/services/: auth_service.py  task_service.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: ProtectedRoute.tsx
frontend/lib/: api.ts  auth.tsx  db.ts
frontend/types/: index.ts
history/prompts/: 005-generate-task-list.tasks.prompt.md  006-implement-foundational-tasks.red.prompt.md  007-implement-authentication-us1.red.prompt.md  008-implement-task-creation-us2.red.prompt.md  009-implement-task-retrieval-us3.red.prompt.md  010-implement-task-update-deletion-us4.red.prompt.md  011-implement-polish-tasks.red.prompt.md  012-final-polish-and-prep.red.prompt.md
history/prompts/001-task-crud-auth/: 2-create-task-crud-auth-spec.spec.prompt.md  (+2 more)
specs/: phase2-plan.md  phase2-tasks.md
specs/001-task-crud-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/features/: authentication.md
(+10 files in other folders)
